# DAWn

./: .gitignore  LICENSE  README.md  package-lock.json
electron-react-tailwind/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
electron-react-tailwind/electron/: main.js  preload.js
electron-react-tailwind/native/dawn_engine/: CMakeLists.txt
electron-react-tailwind/native/dawn_engine/Source/: Engine.cpp  Engine.h  Main.cpp
electron-react-tailwind/public/samples/drums/: kick.txt
electron-react-tailwind/src/: index.css  main.tsx
electron-react-tailwind/src/components/: App.tsx  BackgroundFX.tsx  Fader.tsx  Knob.tsx  Meter.tsx  PianoRollGrid.tsx  TrackRow.tsx
electron-react-tailwind/src/components/cards/: AICard.tsx
juce-bridge/: CMakeLists.txt  README.md
juce-bridge/include/: Bridge.h
juce-bridge/src/: Bridge.cpp
